# TrustPlane

./: .env.example  .gitignore  Dockerfile  QUALITY_MANAGEMENT.md  README.md  TECHNICAL_DOCUMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: Dockerfile  package.json
dashboard/app/: page.tsx
dashboard/app/api/dashboard/: route.ts
docs/: ARCHITECTURE.md  EU_AI_ACT.md  PILOT_REPORT_TEMPLATE.md  WHITEPAPER.md
docs/scenarios/: healthcare.md  legal.md  public-sector.md
enterprise/: app.py  tier.py
enterprise/audit/: compliance_report.py  exporter.py
enterprise/auth/: middleware.py  rate_limit.py
enterprise/config/: loader.py  provider.yaml.example
enterprise/providers/: anthropic.py  base.py  cerebras.py  groq.py  ollama.py  openai.py  registry.py
enterprise/tenants/: router.py
enterprise/webhooks/: dispatcher.py
gateway/: models.py
licensing/: DPA_NDA.md  ORDER_FORM.md  PILOT_AGREEMENT.md
mcp/: CLAUDE_CODE_SETUP.md
tests/: test_smoke.py
ui/: package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/reports/: page.tsx
ui/app/settings/: page.tsx
ui/app/traces/: page.tsx
ui/components/: ApiKeyGate.tsx  RiskBadge.tsx  Sidebar.tsx
ui/lib/: api.ts  utils.ts
